[package]
name = "tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
pathdiff = "0.2.1"

[profile.release]
opt-level = 'z' # Optimize for size
lto = true
codegen-units = 1
panic = 'abort'
